[gd_scene load_steps=2 format=3 uid="uid://bnkwuifp268f5"]

[ext_resource type="Script" path="res://Script/UI/ingame_menu.gd" id="1_6eqmy"]

[node name="IngameMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6eqmy")

[node name="PanelContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -76.0
offset_right = 64.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 400)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 128.0
offset_bottom = 100.0

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
text = "Restart Level"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
text = "Quit Game"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 52.0
offset_bottom = 11.5
grow_vertical = 2
text = "Score: "

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
